Fix Overflow-X

--- a/style.scss
+++ b/style.scss
@@ -2,7 +2,7 @@
     --main-bg: #080808;
     --secondary-bg: #090909;
     --font-color: #adb5bd;
-    --accent-color: #228be6;
+    --accent-color: #4c6ef5;
     --input-color: #868e96;
 }
 *{
@@ -63,7 +63,7 @@ main{
         .header-description{
             line-height: 1.4;
             font-size: 1.05rem;
-            margin: 3rem 3rem;
+            margin: 3vh 3vw;
             h3:last-of-type{
                 margin-top: 1rem;
             }
@@ -73,7 +73,7 @@ main{
         display: grid;
         grid-template-columns: repeat(2,1fr);
         border: none;
-        padding: 2rem 3rem;
+        padding: 2vh 3vw;
         background-color: var(--secondary-bg);
         box-shadow: 0 2px 8px rgba(28,28,28,.9);
 
